<resources>

    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_random_description">Press the button to generate a random number</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">WOLOX</string>
    <string name="example_wolox_phone">0800 123 4567</string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>
    <string name="view_pager_title">Username: %1$s\nFavourite color: %2$s</string>
    <string name="random_toolbar_title">Random number example</string>
    <string name="request_toolbar_title">Example Request</string>
    <string name="fragment_example_username">Username</string>
    <string name="fragment_example_favourite_color">Your favourite color</string>
    <string name="fragment_example_login">Log in</string>
	<string name="fragment_request_search">Search</string>
    <string name="fragment_request_post_id">Post id</string>
    <string name="fragment_request_invalid_input">Invalid input, please enter a valid id.</string>


    <string name="fragment_login_email">Email</string>
    <string name="fragment_login_password">Password</string>
    <string name="fragment_login_sign_up">Sign up</string>
    <string name="fragment_login_error_all_fields_required">All fields are required</string>
    <string name="fragment_login_error_invalid_email">Invalid email format</string>
    <string name="fragment_signup_join">Join</string>
    <string name="agree_terms_and_cond">By joining you agree to our <u>Terms &amp; conditions</u></string>

    <string name="fragment_login_error_login_credentials">Invalid username and password combination</string>
    <string name="profile_toolbar_title">Profile</string>
    <string name="news_toolbar_title">News</string>
    <string name="fragment_news_add_new">add_new</string>
    <string name="fragment_add_new_title">Title</string>
    <string name="fragment_add_new_description">Add a description</string>
    <string name="fragment_home_toolbar_title">Wolox</string>

    <string name="error_network_generic">Error: Could not reach server</string>
    <string name="fragment_news_error_request">Error loading news</string>
    <string name="fragment_new_details_post">Post</string>
    <string name="error_refreshing_generic">Error refreshing</string>

</resources>