<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">


		<androidx.appcompat.widget.AppCompatImageView
			android:id="@+id/iv_header"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:srcCompat="@drawable/login_cover"
			android:scaleType="fitXY"
			android:adjustViewBounds="true"/>

		<androidx.appcompat.widget.AppCompatImageView
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:layout_constraintTop_toTopOf="@id/iv_header"
			app:layout_constraintStart_toStartOf="@id/iv_header"
			app:layout_constraintEnd_toEndOf="@id/iv_header"
			app:layout_constraintBottom_toBottomOf="@id/iv_header"
			app:srcCompat="@drawable/shape_gradient_image_overlay"/>

		<androidx.appcompat.widget.AppCompatImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:srcCompat="@drawable/wolox_logo_large"
			app:layout_constraintStart_toStartOf="@id/iv_header"
			app:layout_constraintEnd_toEndOf="@id/iv_header"
			app:layout_constraintTop_toBottomOf="@id/iv_header"
			app:layout_constraintBottom_toBottomOf="@id/iv_header"/>


		<EditText
			android:id="@+id/usernameInput"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/spacing_large"
			android:layout_marginRight="@dimen/spacing_large"
			android:gravity="left"
			android:hint="@string/fragment_login_email"
			android:inputType="textEmailAddress"
			android:maxLines="1"
			app:layout_constraintBottom_toTopOf="@id/passwordInput"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_chainStyle="packed" />

		<EditText
			android:id="@+id/passwordInput"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/spacing_large"
			android:layout_marginLeft="@dimen/spacing_large"
			android:layout_marginRight="@dimen/spacing_large"
			android:gravity="left"
			android:hint="@string/fragment_login_password"
			android:inputType="textPassword"
			android:maxLines="1"
			app:layout_constraintBottom_toTopOf="@id/loginButton"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/usernameInput"/>

		<Button
			android:id="@+id/loginButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/spacing_large"
			android:text="@string/fragment_example_login"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="@id/passwordInput"
			app:layout_constraintStart_toStartOf="@id/passwordInput"
			app:layout_constraintTop_toBottomOf="@id/passwordInput"
			app:backgroundTint="@android:color/white"/>

		<Button
			android:id="@+id/signupButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/spacing_large"
			android:text="@string/fragment_login_sign_up"
			app:layout_constraintTop_toBottomOf="@id/loginButton"
			app:layout_constraintEnd_toEndOf="@id/loginButton"
			app:layout_constraintStart_toStartOf="@id/loginButton"
			app:backgroundTint="@color/colorPrimaryDark"
			android:textColor="@android:color/white"/>


		<TextView
			android:id="@+id/terms"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:text="@string/fragment_login_terms_and_cond"
			android:layout_marginBottom="@dimen/spacing_large"/>
	</androidx.constraintlayout.widget.ConstraintLayout>

</layout>